--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+    <!-- mail -->
+    <h2>Inserisci la tua mail</h2>
+    <input type="text" id="input_mail">
+
+    <!-- dadi -->
+
+
+
 
 </body>
 
