--- a/index_dadi.html
+++ b/index_dadi.html
@@ -5,21 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mail</title>
+    <title>Dadi</title>
 
-    <script type="text/javascript" src="./js/mail.js" defer></script>
+    <script type="text/javascript" src="./js/dadi.js" defer></script>
 
 </head>
 
 <body>
-    <!-- mail -->
-    <h2>Inserisci la tua mail</h2>
-    <input type="text" id="user_mail">
+
+    <!-- dadi -->
+
+    <h2>Inserisci il tuo numero</h2>
+    <input type="text" id="user_dado">
     <button type="button" id="push">Invia</button>
-
-
-
-
 
 
 </body>
