--- a/index_dadi.html
+++ b/index_dadi.html
@@ -18,6 +18,9 @@
     <h2>Inserisci il tuo numero</h2>
     <input type="text" id="user_dado">
     <button type="button" id="push">Invia</button>
+    <br>
+    <h2 id="dado_result"></h2>
+    <h2 id="user_result"></h2>
 
 
 </body>
