--- a/index_dadi.html
+++ b/index_dadi.html
@@ -15,12 +15,10 @@
 
     <!-- dadi -->
 
-    <h2>Inserisci il tuo numero</h2>
-    <input type="text" id="user_dado">
-    <button type="button" id="push">Invia</button>
+    <h2>Gioco dei dadi</h2>
+    <button type="button" id="push">Lancia</button>
     <br>
-    <h2 id="dado_result"></h2>
-    <h2 id="user_result"></h2>
+    <h2 id="game_result"></h2>
 
 
 </body>
