--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
 
 <body>
     <!-- mail -->
-    <h2>Inserisci la tua mail</h2>
-    <input type="text" id="user_mail">
-    <button type="button" id="push">Invia</button>
 
-
-
-
-
+    <h1>Benvenuto, inserisci la tua mail</h1>
+    <input type="text" id="write_mail">
+    <button type="button" id="push">Login</button>
 
 </body>
 
